[gd_scene load_steps=5 format=3 uid="uid://detw37quvl3tc"]

[ext_resource type="Texture2D" uid="uid://cqcklv7pnwnnv" path="res://recusos/sprites/world_tileset.png" id="1_eahxs"]
[ext_resource type="Script" uid="uid://cpogxbojluld1" path="res://codigos/botella.gd" id="2_0imyg"]
[ext_resource type="AudioStream" uid="uid://5kg4uexr6s0e" path="res://recusos/sounds/power_up.wav" id="2_7wru6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31kj1"]
size = Vector2(9, 14)

[node name="botella" type="Sprite2D"]
texture = ExtResource("1_eahxs")
region_enabled = true
region_rect = Rect2(0, 128, 17, 16)
script = ExtResource("2_0imyg")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_31kj1")

[node name="sonido_Powerups" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_7wru6")
bus = &"efeto de sonido"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="sonido_Powerups" to="." method="_on_sonido_powerups_finished"]
